fix: some broken styles in settings popups

--- a/styles/desmos/catppuccin.user.less
+++ b/styles/desmos/catppuccin.user.less
@@ -592,7 +592,8 @@
       border-bottom-color: @overlay2 !important;
     }
 
-    .dcg-axis-label {
+    .dcg-axis-label,
+    .dcg-clickable-menu-row:has(.dcg-input-label) > .dcg-mathquill-wrapper {
       --dcg-accent-color: @accent !important;
     }
 
@@ -601,7 +602,8 @@
     .dcg-action-polar.dcg-selected > i::before,
     .dcg-grapher__error-in-graph-bounds,
     .dcg-toast-view,
-    .dcg-toast .dcg-undo {
+    .dcg-toast .dcg-undo,
+    .dcg-segmented-control-container .dcg-selected i::before {
       color: @base !important;
     }
 
